--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,20 @@
     <title>index</title>
 </head>
 <body>
-    <button onclick = "saveRequest()"> 작성 </button>
+    <button onclick = "saveMember()"> 회원가입 </button>
+    <button onclick = "Login()"> 로그인 </button>
+    <button onclick = "saveArticle()"> 글쓰기 </button>
 </body>
 <script>
-    function saveRequest() {
+    function saveMember() {
+        location.href = "/member/save";
+    }
+
+        function Login() {
+        location.href = "/member/login";
+    }
+
+    function saveArticle() {
         location.href = "/board/save";
     }
 </script>
