--- a/src/main/resources/templates/saveBoard.html
+++ b/src/main/resources/templates/saveBoard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>save</title>
+    <title>saveBoard</title>
 </head>
 <body>
 <form action = "/board/save" method = "post" enctype = "multipart/form-data">
