--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <button onclick = "saveMember()"> 회원가입 </button>
     <button onclick = "Login()"> 로그인 </button>
-    <button onclick = "saveArticle()"> 글쓰기 </button>
+    <button onclick = "saveArticle()"> 글쓰기. </button>
 </body>
 <script>
     function saveMember() {
